# Proyecto-Final-A-S-Grupo-3

./: .gitignore  Guia_Reportes_Automaticos_VcM.docx  Informe_Tecnico_G3_ReportesAutomaticos.md  LICENSE  README.md  SCOPE.md  SETUP.md  guion_presentacion_g3.md  pyproject.toml
docs/: DEMO.md  FEEDBACK.md  INFORME.md  MANUAL-ANALISTA.md  arquitectura-multi-usuario.md  demo-cohort.example.json
docs/discovery/: ACTION_CATALOG.md  API_INVENTORY.md  AUTH_FLOW.md  DISCOVERY_NOTES.md  RECONCILIATION.md
docs/discovery/samples/: convocatorias_estado_buscar.json  convocatorias_fases_obtener_34.json  convocatorias_listar-combo.json  convocatorias_postulacion_totales.json  estadisticas_globales-proyectos.json  mantenedores_listarCarrera.json  mantenedores_listarFacultad.json  mantenedores_repositorios.json  postulacion_buscar_extension.json  postulacion_buscar_postgrado.json  postulacion_buscar_pregrado.json  postulacion_exportar-excel.json  postulacion_listar-cambios_3033.json  postulacion_obtener_3033.json  postulacion_totales_pregrado.json  proyectos_listar_pregrado.json  usuarios_verifica-token.json
docs/superpowers/plans/: 2026-06-07-sisav2-mcp-fase0-descubrimiento-api-plan.md  2026-06-07-sisav2-mcp-fase1-servidor-readonly-plan-DRAFT.md  2026-06-07-sisav2-mcp-fase1-servidor-readonly-plan.md  2026-07-13-codex-desktop-first-setup.md
docs/superpowers/specs/: 2026-06-07-sisav2-mcp-fase0-descubrimiento-api-design.md  2026-06-07-sisav2-mcp-fase1-servidor-readonly-design.md  2026-07-13-codex-desktop-first-setup-design.md
notebooks/: README.md  experimentos.ipynb
src/sisav2_mcp/: __init__.py  _logging.py  app.py  audit.py  config.py  mock_backend.py  onboarding.py  server.py
src/sisav2_mcp/auth/: __init__.py  base.py  keyring_store.py  pkce.py  ropc.py
src/sisav2_mcp/client/: __init__.py  errors.py  http.py
src/sisav2_mcp/models/: __init__.py  analysis.py  base.py  bitacora.py  catalogo.py  detalle.py  enums.py  fase.py  postulacion.py  reportes.py  usuario.py  writes.py
src/sisav2_mcp/resources/: __init__.py  catalog.py  register.py
tests/: test_analysis.py  test_analysis_register.py  test_app.py  test_auth.py  test_client.py  test_commit_mock.py  test_contracts.py  test_onboarding.py  test_reports.py  test_resources.py  test_semantic_store.py  test_setup_clients.py  test_setup_verify.py  test_setup_web.py  test_smoke.py  test_tool_errors.py  test_tools.py  test_writes.py
(+20 files in other folders)
